@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
-SET(CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "Install path prefix")
+# CMP0011 should be set here, otherwise policy set in module won't affect
+# here.
+CMAKE_POLICY(SET CMP0011 OLD)
 ####################################################################
 # Recommended policy setting
 #
@@ -42,22 +44,18 @@ SET(LICENSE "<PRJ_LICENSE>")
 #
 SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/Modules ${CMAKE_ROOT}/Modules )
 
-INCLUDE(ManageVariable RESULT_VARIABLE MANAGE_VARIABLE_PATH)
-IF(MANAGE_VARIABLE_PATH STREQUAL "NOTFOUND")
-    MESSAGE(FATAL_ERROR "ManageVariable is not found in CMAKE_MODULE_PATH,
+INCLUDE(ManageEnvironment RESULT_VARIABLE MANAGE_ENVIRONMENT_PATH)
+IF(MANAGE_ENVIRONMENT_PATH STREQUAL "NOTFOUND")
+    MESSAGE(FATAL_ERROR "ManageEnvironment is not found in CMAKE_MODULE_PATH,
 	    please:
 	    1) install cmake-fedora, or;
     2) wget -P SOURCES https://fedorahosted.org/releases/c/m/cmake-fedora/cmake-fedora-modules-only-latest.tar.gz
     tar zxvf SOURCES/cmake-fedora-modules-only-latest.tar.gz")
-ENDIF(MANAGE_VARIABLE_PATH STREQUAL "NOTFOUND")
-
-INCLUDE(CMakeVersion)
+ENDIF(MANAGE_ENVIRONMENT_PATH STREQUAL "NOTFOUND")
 
 INCLUDE(ManageVersion)
 LOAD_RELEASE_FILE("RELEASE-NOTES.txt")
 INCLUDE(UseUninstall)
-INCLUDE(CompileEnv)
-SET_USUAL_COMPILE_ENVS()
 
 ####################################################################
 # Building
