@@ -1,10 +1,11 @@
-PRJ_VER=0.7.1.993
+PRJ_VER=0.7.99
 SUMMARY=Fixed Bug 725615, 725617;Remove fedpkg_commit, use fedpkg_import instead; Improved Zanata Support.
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=725615, 725617
 [Changes]
 - Fixed Bug 725615 - cmake-fedora: Use UTC for changelog
 - Fixed Bug 725617 - cmake-fedora: target 'tag' should stop when tag file exists.
+- Module CompileEnv.cmake is obsoleted by ManageEnvironment.cmake
 - Renamed MANAGE_VARIABLE with MANAGE_VARIABLE_PATH,
   because it is what the variable actually store.
 - Move the cmake policies to the front.
